<resources>
    <string name="app_name">VideoLock</string>
    <string name="deep_link_hosturl">videolock.com</string>
    <string name="content_description">content description</string>
    <string name="save_media">Save to gallery</string>
    <string name="no_record">No records found</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="create_channel">Create Channel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="hint_text">enter username/email</string>
    <string name="txt_checkemail">Check your email and enter your code</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>
    <string name="synced_media">Synced Media</string>
    <string name="local_files">Local Files</string>
    <string name="published_files">Published Files</string>
    <string name="asynced_media">Asynced Media</string>
    <string name="please_enter_title">Please enter title or description</string>
    <string name="invalid_empty_mediaid">Invalid or empty media id!</string>
    <string name="login_here">Please login here to update title and description!</string>
    <string name="metadata_updated">Metadata updated successfully!</string>
    <string name="file_uploaded">File uploaded successfully!</string>
    <string name="create_onedrive_client">Please wait while create the client...</string>
    <string name="dropbox_appkey_followedbydb_composer">db-unm21q9pupo7xyg</string>
    <string name="dropbox_appkey_composer">unm21q9pupo7xyg</string>
    <string name="dropbox_appsecret_composer">szxh2fqpibooc3o</string>
    <string name="dropbox_appkey_followedbydb_composer_audio">db-erqffdu9w70efuc</string>
    <string name="dropbox_appkey_composer_audio">erqffdu9w70efuc</string>
    <string name="dropbox_appsecret_composer_audio">vdv61wgg8mzzb0c</string>
    <string name="dropbox_appkey_followedbydb_composer_videoimage">db-5o7i2uleiln4ouu</string>
    <string name="dropbox_appkey_composer_videoimage">5o7i2uleiln4ouu</string>
    <string name="dropbox_appsecret_composer_videoimage">9k9orlkjbkfvwwe</string>
    <string name="dropbox_appkey_followedbydb_reader">db-wekhe46wycpw649</string>
    <string name="dropbox_appkey_reader">wekhe46wycpw649</string>
    <string name="dropbox_appsecret_reader">mq2f03o17bj22ax</string>
    <string name="box_clientid">wbr5nopz36g7ed9tfizxp77vecnpb625</string>
    <string name="box_secret">0VjpiF0sPjNsrlSPfEyGGG4uDIpmPTd9</string>
    <string name="android_api_key">AIzaSyDPoZJinB-VFdViZST5kRggT92m3qOrh7w</string>
    <string name="limit_reached_title">30-SECOND \nLIMIT REACHED</string>
    <string name="limit_reached">This lite version of the VideoLock app lets you record unlimited short videos and audios.\nTo record and
        certify longer videos/audios, please upgrade to the full version VideoLock.</string>
    <string name="thankyou_for_using">Thank you for using the VideoLock app. This lite version helps you certify an unlimited number of
        photos and 30-second long videos and audios. \nThe upgraded version of VideoLock allows you to record videos and audios
        longer than 30-seconds.</string>
    <string name="sharing_a_trimmed_video">Sharing a trimmed version is an advanced feature. Upgrade</string>
    <string name="send_to">Send To</string>
    <string name="capture">CAPTURE</string>
    <string name="start_by_documenting">Start by documenting what you\'re experiencing. Use DeepTruth to create audio, video and photo files.</string>
    <string name="verify"> VERIFY</string>
    <string name="once_your_media_is_recorded">Once your media is recorded, it\'s logged as the original verified file. It can\'t be altered or edited in any way.</string>
    <string name="Share">SHARE</string>
    <string name="share_your_media_via_text">Share your media via text, document sharing sites, or on the public DeepTruth Channel.</string>
    <string name="learn">LEARN</string>
    <string name="watch_helpful_videos">Watch helpful videos in the Media Gallery to learn more about DeepTruth.</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="size">Size:</string>
    <string name="folder">Folder:</string>
    <string name="notes">Notes:</string>
    <string name="start_time">Start Time :</string>
    <string name="end_time">End Time:</string>
    <string name="duration">Duration:</string>
    <string name="meta">Meta</string>
    <string name="encyrption">Encryption</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="blockchain_id">Blockchain ID:</string>
    <string name="hash_formula">Hash Formula:</string>
    <string name="mediahash">Media Hash:</string>
    <string name="blockid">Block ID:</string>
    <string name="metrichash">Meta Hash:</string>
    <string name="deeptruth">deeptruth</string>
    <string name="proof_of_the_truth">Proof of the Truth</string>
    <string name="appversion">Version: </string>
    <string name="record_now">RECORD NOW</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="initiating">Initiating…</string>
    <string name="processing">Processing…</string>
    <string name="please_wait">Please wait</string>
    <string name="permissions_denied_exit">Permissions denied, exit.</string>
    <string name="welcome_inapp">Welcome to the Video Hash App. To learn about the app, swipe left</string>
    <string name="authentic_fraud">Video Hash allows you to determine if your video is authentic or fraudulent</string>
    <string name="record_crop_count">Record a video, crop video, and count frames</string>
    <string name="trim_video_match">Trim your video to find matching hashes</string>
    <string name="video_has_been_encrypted">Video Has Been Encrypted!</string>
    <string name="congratulations_video">Congratulations on your video!</string>
    <string name="how_would_you">How would you like to share your video?</string>
    <string name="audio_has_been_encrypted">Audio Has Been Encrypted!</string>
    <string name="congratulations_audio">Congratulations on your audio!</string>
    <string name="audio_how_would_you">How would you like to share your audio?</string>
    <string name="photo_has_been_encrypted">Photo Has Been Encrypted!</string>
    <string name="congratulations_photo">Congratulations on your photo!</string>
    <string name="photo_how_would_you">How would you like to share your photo?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="md">md5</string>
    <string name="md_salt">md5+salt</string>
    <string name="sha">SHA1</string>
    <string name="sha_salt">SHA1+salt</string>
    <string name="hash_every">Hash Every</string>
    <string name="hash">Hash</string>
    <string name="frames">Frames</string>
    <string name="settings">Settings</string>
    <string name="hash_list">Hash List</string>
    <string name="frames_per_second">Frames per second</string>
    <string name="metric_list">Metric List</string>
    <string name="delete_confirm_video">Are you sure you want to delete this video?</string>
    <string name="dlt_cnfm_audio">Are you sure you want to delete this audio?</string>
    <string name="dlt_cnfm_photo">Are you sure you want to delete this photo?</string>
    <string name="bg_sync_complete">background synchronization complete.</string>
    <string name="share">Share</string>
    <string name="new_video">New Video</string>
    <string name="watch">Watch Video</string>
    <string name="share_full_video">Share Full Video</string>
    <string name="save_to_camera">Save to Camera Roll</string>
    <string name="share_partial_video">Share Partial Video</string>
    <string name="cancel_viewlist">Cancel and View List</string>
    <string name="new_audio">New Audio</string>
    <string name="listen">Listen Audio</string>
    <string name="share_partial_audio">Share Partial Audio</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="str_private">Private</string>
    <string name="str_public">Public</string>
    <string name="str_direct_link">Direct Link</string>
    <string name="str_trim_share">Trim &amp; Share</string>
    <string name="file_not_supported">File format not supported</string>
    <string name="file_doesnot_exist">File doesn\'t exist!</string>
    <string name="file_is_empty">File is empty!</string>
    <string name="file_uri_parse_error">Error on URI parse!</string>
    <string name="media_already_exist">Media already exist in app!</string>
    <string name="allow_apps_to">Please allow app to display on top of other apps.</string>
    <string name="new_photo">New Photo</string>
    <string name="view_photo">Preview</string>
    <string name="share_partial_photo">Share Partial Photo</string>
    <string name="description">Media Controls</string>
    <string name="confirm_channel">Confirm Channel</string>
    <string name="please_confirm_your_channel_name">Please confirm your channel name:</string>
    <string name="channel_name_is_unchangeable_after_an_account_is_created">* Channel names are unchangeable \nafter an account is created.</string>
    <string name="info_trimmed">TRIMMED</string>
    <string name="info_valid">VALID</string>
    <string name="info_invalid">INVALID</string>
    <string name="info_caution">CAUTION</string>
    <string name="valid_line1">The image has not been modified - not even a single pixel, and </string>
    <string name="valid_line2">The sound has not been altered, and </string>
    <string name="valid_line3">The metadata has not been altered, and </string>
    <string name="valid_line4">All 80+ layers of metadata were precise and recorded.</string>
    <string name="caution_line1">The image has not been modified - not even a single pixel, and</string>
    <string name="caution_line2">The sound has not been altered, and</string>
    <string name="caution_line3">The metadata has not been altered, and</string>
    <string name="caution_line4">One of the 80+ layers of metadata was not available/precise:</string>
    <string name="caution_sub_line1">o GPS was not available</string>
    <string name="caution_sub_line2">o GPS accuracy was wider than 50 feet</string>
    <string name="caution_sub_line3">o No internet connection during recording</string>
    <string name="caution_sub_line4">o Slow or delayed connection</string>
    <string name="invalid_line1">A portion of an image has been modified or</string>
    <string name="invalid_line2">A portion of the audio has been modified or</string>
    <string name="invalid_line3">Any one of the 80+ layers of metadata has been changed:</string>
    <string name="invalid_sub_line1">o Location changed</string>
    <string name="invalid_sub_line2">o Time changed</string>
    <string name="invalid_sub_line3">o Cell tower proximity changed</string>
    <string name="invalid_sub_line4">o Speed, direction, altitude changed</string>
    <string name="invalid_sub_line5">o Satellite locations changed</string>
    <string name="trimmed_line1">Part of the original recording is not included in the version you are watching.</string>
    <string name="txt_note">Note: If the recording was not originally created by VideoLock or the recording has been compressed by an email or text messaging system, the entire recording will be considered invalid.</string>
</resources>